# ivory-backend-acl2

./: AssertionReasoning.txt  Factorial.hs  IvoryFollowOn.txt  Loop.hs  Makefile  NOTES  README.md  Testcases.hs  Tests.hs  ivory-backend-acl2.cabal
ivory-backend-acl2/: ivory-backend-acl2.cabal
ivory-backend-acl2/src/Ivory/Compile/: ACL2.hs
ivory-backend-acl2/src/Ivory/Compile/ACL2/: CPSConvert.hs
mira/: mira.cabal
mira/src/: Mira.hs
mira/src/Mira/: ACL2.hs  ACL2ConvertCPS.hs  ACL2ConvertRTL.hs  CLL.hs  CPS.hs  CPSConvert.hs  Expr.hs  Intrinsics.hs  RTL.hs  RTLConvert.hs  Verify.hs
publications/: Makefile  sitaps-dove.tex
sandbox/: factorial.lisp  loopTest-cps.lisp
src/: Mira.hs
src/Ivory/Compile/: .ACL2.hs.swp  ACL2.hs
src/Ivory/Compile/ACL2/: ACL2.hs  ACL2Convert.hs  ACL2Convert2.hs  CLL.hs  CPS.hs  CPSConvert.hs  Compile.hs  Expr.hs  RTL.hs  RTLConvert.hs  RecTopoSort.hs  SExpr.hs
src/Ivory/Compile/ACL2/attic/: ACL2ConvertRTL.hs
src/Ivory/Opts/: Asserts.hs
src/Ivory/Opts/Asserts/: VC.hs
src/Mira/: ACL2.hs  ACL2Convert.hs  ACL2ConvertCPS.hs  CLL.hs  CPS.hs  CPSConvert.hs  Expr.hs  RTL.hs  RecTopoSort.hs  VC.hs  Verify.hs
src/Mira/attic/: Verify.hs
