name:       ivory-backend-acl2
version:    0.0.0
category:   Language, Compiler, Formal Methods
synopsis:   ACL2 code generation and assertion verification for Ivory.
author:     Tom Hawkins  <tomahawkins@gmail.com>
maintainer: Tom Hawkins  <tomahawkins@gmail.com>

license: BSD3
license-file: LICENSE

build-type:    Simple
cabal-version: >= 1.10

library
  default-language: Haskell2010
  build-depends:
    base     >= 4.0,
    process  >= 1.1,
    monadLib >= 3.7.2,
    acl2     >= 0.0.1,
    ivory
  exposed-modules:
    Ivory.Compile.ACL2
    Ivory.Compile.ACL2.ACL2Convert
    Ivory.Compile.ACL2.CLL
    Ivory.Compile.ACL2.CPS
    Ivory.Compile.ACL2.CPSConvert
    Ivory.Compile.ACL2.Compile
    Ivory.Compile.ACL2.Expr
    Ivory.Compile.ACL2.RecTopoSort
    Ivory.Opts.Asserts
    Ivory.Opts.Asserts.VC
  hs-source-dirs: src
  ghc-options: -W

source-repository head
  type:     git
  location: git://github.com/tomahawkins/ivory-backend-acl2.git

